== Changelog ==

= 2.1.0 =

* Extend getting order by order number

= 2.0.5 =

* Adapt UK standards

= 2.0.4 =

* Ensure that ampersand is escaped in the webhooks signature verifier

= 2.0.3 =

* Use home_url instead of site_url
* Empty cart on order confirm
* Rollback changes on invoice external reference id

= 2.0.2 =

* Use company shipping address as a fallback when company billing address is null

= 2.0.1 =

* Fix sandbox or production setting name

= 2.0.0 =

* Hosted checkout and lot of fixes
* Rename plugin and separate changelog from readme
* Fix hosted checkout issues

= 1.3.4 =

* Changes for B2B market plugin compatibility

= 1.3.3 =

* Changes on plugin to update to the WordPress marketplace
* Add code sniffer and fix the issues

= 1.3.2 =

* Add early return on credit note creation
* Minor fixes on the credit note creation/listing

= 1.3.1 =

* Add payment method name to the enabled label
* Remove instruction field to make it automatically localised
* Add tips to admin fields
* Include more supported countries in the list

= 1.3.0 =

* Add fallback if the wcpdf_get_document number is not found
* Fix webhooks signature
* Allow send products with value zero
* Remove title and description from payment method gateway's configuration to dynamically change the language
* Include instruction in the created order email
* Add wordpress language to mondu filter
* Minor fixes

= 1.2.1 =

* Add cache if payment method endpoint returns 403

= 1.2.0 =

* WCPDF: Add filter for template extension
* Mondu only block order if we have an actually payment
* Add French translations
* Add Austria i18n
* Only show Mondu if it is validated

= 1.1.4 =

* Added WCPDF invoice extensions for our payment methods

= 1.1.3 =

* Handle not found WCPDF class
* Use hosted remote logo instead of a local one

= 1.1.2 =

* WCPDF Invoice: Language change and formatting
* Non mondu orders crash with an error message
* Support Order Pay page
* Use cart hash as external_reference_id